[gd_scene load_steps=10 format=3 uid="uid://cb04xo2p6db8c"]

[ext_resource type="Script" uid="uid://b4vdq4yjyof1s" path="res://main_menu.gd" id="1_glbon"]
[ext_resource type="Texture2D" uid="uid://f148jo47pnj3" path="res://images/mainmenu2.png" id="1_jix8l"]
[ext_resource type="Texture2D" uid="uid://cd55eoiunwlcn" path="res://images/start2.png" id="2_glbon"]
[ext_resource type="Texture2D" uid="uid://djtkh1avquste" path="res://images/settings.png" id="3_nlkkf"]
[ext_resource type="Texture2D" uid="uid://b0u4r8xrafkit" path="res://images/exit.png" id="4_qe12f"]
[ext_resource type="AudioStream" uid="uid://b4uhtqcr4ojlj" path="res://Sound effects/Hover sound.mp3" id="6_nlkkf"]
[ext_resource type="AudioStream" uid="uid://dj6xlua1ssjv1" path="res://Sound effects/bgm.mp3" id="7_qe12f"]
[ext_resource type="Texture2D" uid="uid://d3gtkv7du868c" path="res://images/volume.png" id="8_8qtwp"]

[sub_resource type="ButtonGroup" id="ButtonGroup_glbon"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_glbon")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.997
offset_right = -1.0
offset_bottom = -0.0560303

[node name="TextureRect2" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.011
offset_bottom = -3.10596
texture = ExtResource("1_jix8l")

[node name="StartButton" type="Button" parent="TextureRect/TextureRect2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.824
anchor_top = 0.297
anchor_right = 0.997
anchor_bottom = 0.385
offset_left = -0.424072
offset_top = -0.0500183
offset_right = -0.546997
offset_bottom = -0.250015
mouse_default_cursor_shape = 2
toggle_mode = true
text = "START"
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="TextureRect/TextureRect2/StartButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -17.0
offset_right = 27.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_glbon")

[node name="ExitButton" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.813
anchor_top = 0.534
anchor_right = 0.994
anchor_bottom = 0.635
offset_left = 0.237
offset_top = 0.0360107
offset_right = -0.0939941
offset_bottom = -0.209991
mouse_default_cursor_shape = 2
text = "EXIT"
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="TextureRect/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -19.0
offset_top = -7.0
offset_right = 30.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_qe12f")

[node name="settingsbutton" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.823
anchor_top = 0.427
anchor_right = 0.998
anchor_bottom = 0.506
offset_left = -0.27301
offset_top = 0.15799
offset_right = -22.698
offset_bottom = -1.87598
mouse_default_cursor_shape = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_glbon")
text = "SETTINGS"

[node name="TextureRect" type="TextureRect" parent="TextureRect/settingsbutton"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -37.0
offset_top = -23.0
offset_right = 52.0
offset_bottom = 17.0
texture = ExtResource("3_nlkkf")

[node name="SettingsPanel" type="Button" parent="TextureRect/settingsbutton"]
visible = false
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.918
offset_left = -4.0
offset_top = -8.99997
offset_right = 9.0
offset_bottom = 0.0180283
mouse_default_cursor_shape = 2

[node name="HSlider" type="HSlider" parent="TextureRect/settingsbutton/SettingsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = -2.651
anchor_top = -3.38
anchor_right = -1.797
anchor_bottom = -3.38
offset_left = -0.00799561
offset_top = -13.48
offset_right = 0.0240173
offset_bottom = 13.52
mouse_default_cursor_shape = 2
allow_greater = true

[node name="TextEdit" type="TextEdit" parent="TextureRect/settingsbutton/SettingsPanel/HSlider"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.5
anchor_top = -0.222
anchor_right = -0.037
anchor_bottom = 1.0
offset_top = -0.00599957
offset_right = 0.0679998
offset_bottom = 6.0
text = "VOLUME"
editable = false

[node name="OptionButton" type="OptionButton" parent="TextureRect/settingsbutton/SettingsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = -3.057
anchor_top = -2.759
anchor_right = -1.839
anchor_bottom = -1.778
offset_left = -0.0559692
offset_top = -0.0140076
offset_right = 0.0880127
offset_bottom = 0.0119781
mouse_default_cursor_shape = 2
allow_reselect = true
item_count = 3
popup/item_0/text = "EASY"
popup/item_0/id = 0
popup/item_1/text = "MEDIUM"
popup/item_1/id = 1
popup/item_2/text = "DIFFICULT"
popup/item_2/id = 2

[node name="Label" type="Label" parent="TextureRect/settingsbutton/SettingsPanel/OptionButton"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 39.0
offset_top = 14.0
offset_right = 84.0
offset_bottom = 6.00004
grow_horizontal = 2
grow_vertical = 2
text = "                DIFFICULTY"

[node name="HoverSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_nlkkf")

[node name="BGMPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_qe12f")
autoplay = true

[node name="VolumeToggle" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.938
anchor_top = 0.037
anchor_right = 0.997
anchor_bottom = 0.074
offset_left = 0.42395
offset_top = -23.976
offset_right = 0.455933
offset_bottom = 0.0480003

[node name="TextureRect" type="TextureRect" parent="VolumeToggle"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.896
offset_top = 2.0
offset_right = 4.0
offset_bottom = 1.992
texture = ExtResource("8_8qtwp")

[connection signal="pressed" from="TextureRect/settingsbutton" to="." method="_on_settingsbutton_pressed"]
